# typedconf

./: README.md  config.default.toml  config.development.toml  main.py  pyproject.toml  verify_openai.py  verify_openai_real.py
.github/workflows/: python-package.yml
tests/: test_core.py  test_formats.py  test_openai_model.py
typedconf/: __init__.py  config.py  schema.py  user_config.py
typedconf/config/: __init__.py  core.py  formats.py  models.py  user_config.py
typedconf/core/: __init__.py  core_interfaces.py  introspection.py  openai_model.py  test_introspection.py  test_tool.py  tool.py
